Corrected a spacing error in the H2 header

--- a/shared-content.css
+++ b/shared-content.css
@@ -14,7 +14,7 @@
 {
 	margin-left: 40px;
 	margin-right: 40px;
-	margin-top: 25px;
+	margin-top: 30px;
 	margin-bottom: 10px;
 	padding: 0px;
 	clear: both;
